Make a bitmaprenderer canvas an ImageSource

At this moment, we cannot correct handle drawImage or createImageBitmap
with a source canvas that is associated with an ImageBitmapRenderingContext.
This CL makes sure that the canvas can be an ImageSource. Layout tests
are added.

BUG=663793

Review-Url: https://codereview.chromium.org/2496013002
Cr-Commit-Position: refs/heads/master@{#431950}

Former-commit-id: 48c029113eb4338243d99dbc76f85896be8f3a22